--- a/index.html
+++ b/index.html
@@ -1,64 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Proxima Nova:wght@900&display=swap"
+    />
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 2rem;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
-        .project {
-            margin-bottom: 1rem;
-            border: 1px solid #ddd;
-            padding: 1rem;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background-color: #333;
-            color: white;
-        }
+      /* Add any necessary styling for the input textbox */
+      .text-input {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        font-size: 20px;
+        border: none;
+        background: transparent;
+        color: white;
+        font-family: 'Open Sans', sans-serif;
+        text-align: justify;
+        line-height: 1.5;
+        resize: vertical; /* Allow vertical resizing of the textarea */
+      }
     </style>
-</head>
-<body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Web Developer</p>
-    </header>
-    <div class="container">
-        <h2>About Me</h2>
-        <p>This is where you can introduce yourself and talk about your skills and interests.</p>
 
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of your first project goes here.</p>
-        </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of your second project goes here.</p>
-        </div>
-        <!-- You can add more project sections as needed -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const androidLarge5Item = document.querySelector('.android-large-5-item');
+        const touchScreenIcon = document.querySelector('.touch-screen-1-icon');
+        let textareaElement; // Declare the textareaElement outside the event listener
 
-        <h2>Contact Me</h2>
-        <p>You can reach me at: <a href="mailto:your@email.com">your@email.com</a></p>
+        androidLarge5Item.addEventListener('click', function () {
+          if (!textareaElement) {
+            // Create a new textarea element if it doesn't exist
+            textareaElement = document.createElement('textarea');
+            textareaElement.className = 'text-input';
+            textareaElement.addEventListener('input', handleInput);
+            androidLarge5Item.innerHTML = '';
+            androidLarge5Item.appendChild(textareaElement);
+            textareaElement.focus();
+          }
+        });
+
+        function handleInput(event) {
+          const text = event.target.value;
+          simulateKeyPresses(text);
+        }
+
+        function simulateKeyPresses(text) {
+          for (const char of text) {
+            const keyEvent = new KeyboardEvent('keydown', {
+              key: char,
+              keyCode: char.charCodeAt(0),
+              which: char.charCodeAt(0),
+              code: 'Key' + char.toUpperCase(),
+              bubbles: true,
+            });
+            textareaElement.dispatchEvent(keyEvent);
+          }
+        }
+      });
+    </script>
+  </head>
+  <body>
+    <div class="android-large-5">
+      <div class="android-large-5-child"></div>
+      <img class="image-2-icon" alt="" src="./public/image-2@2x.png" />
+
+      <div class="android-large-5-item">
+        <img
+          class="touch-screen-1-icon"
+          alt=""
+          src="./public/touchscreen-1@2x.png"
+        />
+      </div>
+
+      <div class="escribe">ESCRIBE</div>
     </div>
-    <footer>
-        &copy; 2023 Your Portfolio. All rights reserved.
-    </footer>
-</body>
+  </body>
 </html>
