--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         />
       </div>
 
-      <div class="escribe">ESCRIBE</div>
+      <div class="escribe">ESCRIBE 10 palabras</div>
     </div>
   </body>
 </html>
